# modorganizer-diagnose_basic

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  appveyor.yml  vcpkg.json
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  SConscript  diagnoseBasic.pro  diagnose_basic_en.ts  diagnosebasic.cpp  diagnosebasic.h
